--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <!-- Navigation Bar -->
   <nav class="navbar">
-    <header class="Logo">Portfolio.</header>
+    <h1 class="Logo">Portfolio.</h1>
     <ul class="nav-links">
       <li><a href="#home">Home</a></li>
       <li><a href="#skills">Skills/Projects</a></li>
@@ -36,7 +36,7 @@
       <a href="Resume.pdf" class="btn" download="Rehan's CV">Download CV</a>
     </div>
     <div class="hero-image">
-      <img src="images/istockphoto-1289411982-612x612.jpg" alt="Developer illustration" class="image-logo">
+      <img src="istockphoto-1289411982-612x612.jpg" alt="Developer illustration" class="image-logo">
     </div>
   </section>
 
@@ -118,5 +118,6 @@
     </div>
   </footer>
 </body>
+
 
 </html>
