Update3 index.html

--- a/index.html
+++ b/index.html
@@ -112,12 +112,13 @@
   <footer id="contact">
     <p>&copy; 2025 Portfolio, All rights reserved.</p>
     <div class="social-links">
-      <a href="https://github.com/Rehan123-King" aria-label="GitHub Profile"><i class="fa-brands fa-github"></i></a>
-      <a href="https://instagram.com/itx_rehan_boyff" aria-label="Instagram Profile"><i class="fa-brands fa-instagram"></i></a>
-      <a href="https://www.youtube.com/@Rehan_Coder" aria-label="Youtube Profile"><i class="fa-brands fa-youtube"></i></a>
+      <a href="https://github.com/Rehan123-King" target="_blank" aria-label="GitHub Profile"><i class="fa-brands fa-github"></i></a>
+      <a href="https://instagram.com/itx_rehan_boyff" target="_blank" aria-label="Instagram Profile"><i class="fa-brands fa-instagram"></i></a>
+      <a href="https://www.youtube.com/@Rehan_Coder" target="_blank" aria-label="Youtube Profile"><i class="fa-brands fa-youtube"></i></a>
     </div>
   </footer>
 </body>
 
 
 </html>
+
